# django-bizcal

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: api.md  architecture.md  django-integration.md  production.md  release.md  stability.md  upgrading.md
examples/: deadline_policies.py  django_context_resolution.py  django_persistence.py  django_usage.py  helpdesk_sla.py  performance_benchmark.py  quickstart.py  sla_deadlines.py
src/django_bizcal/: __init__.py  admin.py  api.py  apps.py  builder.py  config.py  db.py  deadlines.py  django_api.py  exceptions.py  intervals.py  models.py  policies.py  providers.py  resolvers.py  services.py  settings.py  signals.py  types.py  windows.py
src/django_bizcal/calendars/: __init__.py  base.py  composite.py  working.py
src/django_bizcal/migrations/: 0001_initial.py  0002_day_overrides.py
tests/: __init__.py  conftest.py  test_builder.py  test_ci_regressions.py  test_composition.py  test_context_resolution.py  test_db_day_overrides.py  test_db_provider.py  test_deadline_policies_django.py  test_deadlines.py  test_django_integration.py  test_django_public_api.py  test_dst.py  test_edge_cases.py  test_holidays.py  test_package_metadata.py  test_performance_guards.py  test_policies.py  test_public_api.py  test_settings.py  test_windows.py  test_working_calendar.py
tests/django_test_project/: __init__.py  calendar_resolvers.py  deadline_policy_resolvers.py  settings.py  urls.py
